# best_practices

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
